@@ -14,6 +14,9 @@ codebase that's accumulated over the versions.
   the files should already have been migrated to their new proper locations.
   If upgrading from 0.7.x or earlier, the files will have to be migrated
   manually.
+* Removed CryptedFileKeyring migration support. To maintain an existing
+  CryptedFileKeyring, one must first upgrade to 0.9.2 or later and access the
+  keyring before upgrading to 1.0 to retain the existing keyring.
 
 ----
 0.10
